<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alabaster"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center|right|fill_horizontal|left|center_vertical|fill_vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtViewTries"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewTries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/place_holder_tries"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/main_activity_img_view_dice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/dice_icon"
        app:srcCompat="@drawable/ic_dice" />

    <TextView
        android:id="@+id/activity_main_text_view_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:fontFamily="@font/bungee_outline"
        android:text="@string/placeholder_number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="70sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <EditText
            android:id="@+id/main_activity_edited_txt_num_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:alpha="0.5"
            android:ems="10"
            android:fontFamily="@font/ubuntu_medium"
            android:hint="@string/input_hint"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textColor="@color/navy_blue"
            android:textColorHint="@color/navy_blue"
            android:textSize="16sp" />

        <Button
            android:id="@+id/main_activity_btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/poly_blue"
            android:text="@string/btn_txt"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/main_activity_btn_random_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/rand_btn_txt"
        android:textSize="16sp"
        app:rippleColor="@color/poly_blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/poly_blue"
            android:text="@string/plusSignButn"
            android:textAlignment="center"
            android:textColor="@color/grass_green"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plus_minus_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/plus_minus_text_view_placeholder"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/poly_blue"
            android:text="@string/minusBtn"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>